# ffmpeg_linux_pkg

./: README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
hook/: build.dart
lib/: ffmpeg_linux_pkg.dart  ffmpeg_linux_pkg_bindings_generated.dart
src/: ffmpeg_linux_pkg.c
src/ffmpeg_cpp_wrapper/: .gitignore  CMakeLists.txt
src/ffmpeg_cpp_wrapper/src/: dart_ffi_wrapper.h  main.cpp  video_to_audio.cpp  video_to_audio.hpp
